<resources>
    <string name="app_name">Batik Qualifier</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="empty_favorite">Tidak ada list favorite Batik Sekarang.</string>
    <string name="search_text">Masukan nama Batik yang ingin dicari</string>
    <string name="about_me">Tentang saya</string>
    <string name="back">Back</string>

    <string name="favorite">Favorite</string>
    <string name="delete_favorite">Remove from Favorite</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="empty_data">Data Batik Kosong</string>

    <string name="title_home">Home</string>
    <string name="email_author">kakatamora0806@gmail.com</string>
    <string name="name_author">Al Kautsar Russetya Tamora</string>
</resources>